public/assets/navbar/css/navbar.css
* {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  list-style: none;
  position: relative;
}

.csstransforms .cn-wrapper {
  width: 27em;
  height: 27em;
  overflow: visible;
  position: fixed;
  z-index: 10;
  top: 100%;
  left: 50%;
  border-radius: 50%;
  margin-left: -13.5em;
  margin-top: -13em;
  background: transparent;
  opacity: 0;
  -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  -moz-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  pointer-events: none;
  -webkit-transform: scale(0.1);
  -ms-transform: scale(0.1);
  -moz-transform: scale(0.1);
  transform: scale(0.1);
}

.csstransforms .opened-nav {
  border-radius: 50%;
  opacity: 1;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  pointer-events: auto;
  -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  -moz-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

.cn-overlay {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  -moz-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  z-index: 2;
}

.cn-overlay.on-overlay {
  visibility: visible;
  opacity: 1;
}

.menu-icon {
  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

.menu-icon.rotate {
  transform: rotate(180deg);
}

.csstransforms .cn-wrapper li:first-child img {
  margin-left: 18px;
}

.csstransforms .cn-wrapper li:nth-child(5) img {
  margin-right: 18px;
}

.cn-button {
  border: none;

  background: none;
  color: white;
  padding-bottom: 1em;
  height: 4.5em;
  width: 4.5em;
  background-color: black;
  position: sticky;
  bottom: 1em;
  left: 50%;
  margin-left: -2.25em;
  top: 100%;
  z-index: 9999;
  margin-top: -2.25em;
  border-radius: 50%;
  text-align: center;
  font-weight: 700;
  font-size: 1.5em;
  text-transform: uppercase;
  cursor: pointer;
  z-index: 11;
  border: 1px solid white;
  align-items: center;
  display: flex;
  justify-content: center;
}

.cn-button .menu-icon {
  width: 24px;
  height: 24px;
}

.csstransforms .cn-wrapper:after {
  content: ".";
  display: block;
  font-size: 2em;
  width: 6.2em;
  height: 6.2em;
  position: fixed;
  left: 50%;
  margin-left: -3.1em;
  top: 50%;
  margin-top: -3.1em;
  border-radius: 50%;
  z-index: 10;
  color: transparent;
}

.csstransforms .cn-wrapper li {
  position: absolute;
  width: 10em;
  height: 10em;
  transform: rotate(70deg) skew(50deg);
  -webkit-transform-origin: 100% 100%;
  -moz-transform-origin: 100% 100%;
  transform-origin: 100% 100%;
  overflow: hidden;
  top: 50%;
  left: 50%;
  margin-top: -1.3em;
  margin-left: -10em;
  font-size: 1.5em;
  -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  -moz-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  -webkit-transform: rotate(70deg) skew(50deg);
  -moz-transform: rotate(70deg) skew(50deg);
  -ms-transform: rotate(70deg) skew(50deg);
  pointer-events: none;
}

.csstransforms .cn-wrapper li a {
  display: block;
  height: 14.5em;
  width: 14.5em;
  position: absolute;
  right: -7.25em;
  bottom: -7.25em;
  border-radius: 50%;
  color: #fff;
  background: #272626;
  background: -webkit-radial-gradient(transparent 35%, #272626 35%);
  background: -moz-radial-gradient(transparent 35%, #272626 35%);
  background: radial-gradient(transparent 35%, #272626 35%);
  text-align: center;
  text-decoration: none;
  font-size: 1.2em;
  line-height: 2;
  -webkit-transform: skew(-50deg) rotate(-70deg) scale(1);
  -ms-transform: skew(-50deg) rotate(-70deg) scale(1);
  -moz-transform: skew(-50deg) rotate(-70deg) scale(1);
  transform: skew(-50deg) rotate(-70deg) scale(1);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  pointer-events: auto;
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

.csstransforms .cn-wrapper li a img {
  display: inline-block;
  position: relative;
  margin-top: 1.5em;
  width: 35px;
  height: 35px;
}

.csstransforms .cn-wrapper li a:hover,
.csstransforms .cn-wrapper li a:active,
.csstransforms .cn-wrapper li a:focus {
  background: -webkit-radial-gradient(transparent 35%, #ff3b00 35%);
  background: -moz-radial-gradient(transparent 35%, #ff3b00 35%);
  background: radial-gradient(transparent 35%, #ff3b00 35%);
  scale: 1.1;
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

.csstransforms .cn-wrapper li a:focus {
  position: fixed;
}

.csstransforms .opened-nav li {
  -webkit-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  -moz-transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
}

.csstransforms .opened-nav li:first-child {
  -webkit-transform: rotate(-10deg) skew(50deg);
  -ms-transform: rotate(-10deg) skew(50deg);
  -moz-transform: rotate(-10deg) skew(50deg);
  transform: rotate(-10deg) skew(50deg);
}

.csstransforms .opened-nav li:nth-child(2) {
  -webkit-transform: rotate(30deg) skew(50deg);
  -ms-transform: rotate(30deg) skew(50deg);
  -moz-transform: rotate(30deg) skew(50deg);
  transform: rotate(30deg) skew(50deg);
}

.csstransforms .opened-nav li:nth-child(3) {
  -webkit-transform: rotate(70deg) skew(50deg);
  -ms-transform: rotate(70deg) skew(50deg);
  -moz-transform: rotate(70deg) skew(50deg);
  transform: rotate(70deg) skew(50deg);
}

.csstransforms .opened-nav li:nth-child(4) {
  -webkit-transform: rotate(110deg) skew(50deg);
  -ms-transform: rotate(110deg) skew(50deg);
  -moz-transform: rotate(110deg) skew(50deg);
  transform: rotate(110deg) skew(50deg);
}

.csstransforms .opened-nav li:nth-child(5) {
  -webkit-transform: rotate(150deg) skew(50deg);
  -ms-transform: rotate(150deg) skew(50deg);
  -moz-transform: rotate(150deg) skew(50deg);
  transform: rotate(150deg) skew(50deg);
}

@media only screen and (max-width: 620px) {
  .no-csstransforms li {
    width: 4em;
    height: 4em;
    line-height: 4em;
  }
}

@media only screen and (max-width: 500px) {
  .no-ccstransforms .cn-wrapper {
    padding: 0.5em;
  }

  .no-csstransforms .cn-wrapper li {
    width: 4em;
    height: 4em;
    font-size: 0.9em;
    line-height: 4em;
  }
}

@media only screen and (max-width: 480px) {
  .csstransforms .cn-wrapper {
    font-size: 0.68em;
  }

  .cn-button {
    font-size: 1em;
  }
}

@media only screen and (max-width: 420px) {
  .no-csstransforms .cn-wrapper li {
    width: 100%;
    height: 3em;
    line-height: 3em;
  }
}

